# etf-terminal

./: .env.example  .gitignore  .pre-commit-config.yaml  CHATGPT.md  CLAUDE.md  Makefile  README.md  config.json  config.py  main.py  market_data_prod.db  market_data_uat.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  asset_classes.py  config.json  config.py  macro_series.py
dashboard/: __init__.py  analytics_tab.py  cache.py  charts.py  context_panel.py  controls.py  dashboard.py  dashboard_app.py  graphs_tab.py  header_panel.py  home_page.py  mobile.py  news_page.py  perf.py  rv_tab.py  styles.py  table_styles.py
dashboard/components/: __init__.py  charts.py  controls.py  info_panel.py  security_header.py
dashboard/pages/: __init__.py  dashboard_page.py  home_page.py  macro_page.py  news_page.py
dashboard/styles/: __init__.py  table_styles.py  theme.py
dashboard/tabs/: __init__.py  analytics_tab.py  macro_tab.py  (+3 more)
db/: MIGRATIONS.md  connection.py  schema.py  sql.py
fixed_income/: __init__.py
models/: etf.py  security.py  security_pair.py
notebooks/: 00_setup_and_connections.ipynb  01_prices_and_returns.ipynb  02_macro_series_and_features.ipynb  03_fixed_income_analytics.ipynb  04_pair_trading_sandbox.ipynb  05_holdings_and_metadata.ipynb  06_macro_regime_sandbox.ipynb  07_backtest_template.ipynb  08_macro_vs_etf_sensitivity.ipynb  09_hyg_jnk_macro_pairs_strategy.ipynb  README.md
repositories/: __init__.py  input_repository.py  metadata_repository.py  price_repository.py  security_repository.py
scripts/: backfill_prices.py  enrich_metadata_yf.py  init_db.py  logging_utils.py  script_helpers.py  seed_metadata.py  seed_securities.py
services/: __init__.py  analytics_service.py  market_data_service.py
stores/: __init__.py  query_utils.py
tests/: test_duration_model_selector.py  test_fixed_income_analytics_service.py  test_fmp_client.py  test_macro_feature_service.py  test_news_taxonomy.py  test_security_duration_estimator.py  test_snapshot_utils.py
(+84 files in other folders)
