[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-terminal"
version = "0.1.0"
description = "ETF Terminal fixed-income analytics and Streamlit app"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = [
    "config*",
    "dashboard*",
    "db*",
    "fixed_income*",
    "scripts*",
    "services*",
    "stores*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
