[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-terminal"
version = "0.1.0"
description = "ETF Terminal fixed-income analytics and Streamlit app"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "scipy",
    "sqlalchemy",
    "psycopg[binary]",
    "plotly",
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "ruff",
    "mypy",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
include = [
    "config*",
    "dashboard*",
    "db*",
    "fixed_income*",
    "scripts*",
    "services*",
    "stores*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"
